# study-inbox

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PRODUCT.md  README.md
apps/desktop/: README.md  pyproject.toml
apps/desktop/src/study_inbox/: __init__.py  app.py  classifier.py  config.py  database.py  exporter.py  models.py  validation.py
apps/desktop/tests/: conftest.py  test_api.py  test_classifier.py  test_demo_behavior.py  test_fixtures.py
apps/extension/: README.md  eslint.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/extension/fixtures/: fixture.js  index.html  styles.css
apps/extension/tests/: api-client.test.ts  background-controller.test.ts  background-persistence.test.ts  completion-detector.test.ts  deepseek-adapter.test.ts  deepseek-content-registration.test.ts  deepseek-pause-suppression.test.ts  doubao-fixture-placeholders.test.ts  doubao-fixtures.test.ts  event.test.ts  inspector.test.ts  local-fixture-adapter.test.ts  manifest-permissions.test.ts  recon-controller.test.ts  recon-preview.test.ts  (+6 more)
contracts/: conversation-event.schema.json
docs/: deepseek-dom-reconnaissance.md  deepseek-selector-report.md  doubao-dom-reconnaissance.md  doubao-selector-report.md  extension-manual-acceptance.md  manual-acceptance.md  mock-classifier-rules.md
fixtures/conversations/: invalid.json  learning-ai.json  learning-thermodynamics.json  non-learning.json
scripts/: build-extension.ps1  demo.ps1  setup-extension.ps1  setup.ps1  start-fixture-page.ps1  start.ps1  test-extension.ps1  test.ps1
(+46 files in other folders)
