[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "study-inbox-desktop"
version = "0.1.0"
description = "Local Study Inbox conversation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jsonschema[format]>=4.23,<5",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
  "types-jsonschema>=4.23,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/study_inbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["study_inbox"]
